--- a/client/src/states/search/_search.scss
+++ b/client/src/states/search/_search.scss
@@ -1,22 +1,21 @@
 
 .main-pages {
   /*---------- Sections and Containers -----------*/
-    display: block;
-	
-	.search-body{
+  display: block;
+
+  .search-body {
     margin: 0;
     background-color: #fafafa;
 
     position: relative;
     display: block;
-	}	
-	
-	
-  em{
-  font-style: normal;
-  font-weight: normal;
-  background-color: #44a3e4;
-  color: white;
+  }
+
+  em {
+    font-style: normal;
+    font-weight: normal;
+    background-color: #44a3e4;
+    color: white;
   }
 
   .main-section {
@@ -50,7 +49,7 @@
     height: auto;
     position: relative;
     padding: 35px 0px;
-	    min-height: calc(100vh - 50px);
+    min-height: calc(100vh - 50px);
   }
 
   /*----- ask question --------*/
@@ -68,10 +67,10 @@
     padding: 0;
     border: none;
   }
-	
- /*--------- welcome box -----------*/	
-	
-	.icons {
+
+  /*--------- welcome box -----------*/
+
+  .icons {
     position: relative;
     left: 0;
     right: 0;
@@ -80,65 +79,61 @@
     margin-top: -70px;
     opacity: 0.15;
     z-index: 0;
-}
-	.icon-icons{
-		width: 100%;
-	}
-	
-	
-	.welcome-box{
-		position: relative;
-		width: 100%;
-		height: 200px;
-		display: inline-block;
-		margin-bottom: 10px;
-		    background: #fefeff;
-	    border: 1px solid #f2f2f2;
-		 transition: all linear 0.15s;
-		overflow: hidden;
-	padding: 75px 0 0;	
-		&.closed{
-			height: 0px;
-			opacity: 0;
-			padding: 0;
-			margin: 0;
-		}
-	}	
-	
-	
-	
-	
-	.welcome-title{
-		text-align: center;
-	    font-size: 20px;
-    font-weight: normal;
-    color: #333;	
-	}
-	.welcome-subtitle{
-		text-align: center;
-	 font-size: 14px;
-    font-weight: normal;
-    color: #a49f99;		
-	}
-	
-.close.welcome {
-        top: 10px;
-        right: 10px;
-        width: 35px;
-        height: 35px;
-        position: absolute;
-        margin: 0px;
-		cursor: pointer;
-    }	
-.icon-close {
-        width: 100%;
-        height: 100%;
-        padding: 10px;
-        border-radius: 50%;
-        box-sizing: inherit;
-        fill: #a49f99;
+  }
+  .icon-icons {
+    width: 100%;
+  }
 
+  .welcome-box {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    display: inline-block;
+    margin-bottom: 10px;
+    background: #fefeff;
+    border: 1px solid #f2f2f2;
+    transition: all linear 0.15s;
+    overflow: hidden;
+    padding: 75px 0 0;
+    &.closed {
+      height: 0px;
+      opacity: 0;
+      padding: 0;
+      margin: 0;
     }
+  }
+
+  .welcome-title {
+    text-align: center;
+    font-size: 20px;
+    font-weight: normal;
+    color: #333;
+  }
+  .welcome-subtitle {
+    text-align: center;
+    font-size: 14px;
+    font-weight: normal;
+    color: #a49f99;
+  }
+
+  .close.welcome {
+    top: 10px;
+    right: 10px;
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    margin: 0px;
+    cursor: pointer;
+  }
+  .icon-close {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    border-radius: 50%;
+    box-sizing: inherit;
+    fill: #a49f99;
+
+  }
   /*--------- questions -----------*/
 
   .questions-group, .answers-group {
@@ -146,15 +141,13 @@
     display: block;
     height: auto;
     float: right;
-	background: #fefeff; 
+    background: #fefeff;
   }
-	.questions-group{
-	      border: 1px solid #f2f2f2; 	
-		padding: 15px 0 0;
-	}
-	
-	
-	
+  .questions-group {
+    border: 1px solid #f2f2f2;
+    padding: 15px 0 0;
+  }
+
   .questions-header, .categories-header, .answers-header {
     font-size: 17px;
     font-weight: 400;
@@ -164,14 +157,12 @@
     color: #a49f99;
     padding: 0px 0px 7px;
     position: relative;
-	 
-  }
-	.questions-header{
-		margin: 0 20px;
-	}
 
-	
-	
+  }
+  .questions-header {
+    margin: 0 20px;
+  }
+
   .questions, .answers {
     position: relative;
     padding: 0px 0px 15px;
@@ -184,19 +175,19 @@
     min-height: 400px;
   }
 
-	.icon-popular, .icon-facebook {
+  .icon-popular, .icon-facebook {
     width: 24px;
     height: 24px;
     display: inline-block;
     fill: #a49f99;
     float: right;
   }
-.icon-facebook {	
-	fill: #3a589a;
+  .icon-facebook {
+    fill: #3a589a;
     width: 21px;
     height: 21px;
     margin-top: 2px;
-	}
+  }
   .calendar-number {
     position: absolute;
     font-size: 10.5px;
@@ -327,7 +318,7 @@
     background-color: #F2F2F2;
     margin-left: 15px;
     position: relative;
-    z-index: 500;	  
+    z-index: 500;
   }
 
   .profile-image {
@@ -401,10 +392,10 @@
     -ms-flex-pack: center;
     justify-content: center;
   }
-	.flex-box a{
-position: relative;
-		z-index: 1;
-	}
+  .flex-box a {
+    position: relative;
+    z-index: 1;
+  }
   .flex-height {
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -416,105 +407,102 @@ position: relative;
       position: relative;
     }
   }
-	
-	.question-link{
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 0;
-	}
-	
+
+  .question-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+  }
+
   .question-title {
+    font-size: 14px;
     color: #333;
     line-height: 26px;
     margin-bottom: 8px;
     cursor: pointer;
     max-width: 800px;
     word-wrap: break-word;
-//    text-align: justify;
-//    text-justify: inter-word;	 	  
+    //    text-align: justify;
+    //    text-justify: inter-word;
     &.standalone {
       color: #fff;
       line-height: 28px;
       font-size: 22px;
       margin-top: 7px;
       margin-bottom: 15px;
-	 cursor: auto;
+      cursor: auto;
     }
-	  &.standalone a{
-		  color: #fff;
-		  text-decoration: underline;
-	  } 
-	  
+    &.standalone a {
+      color: #fff;
+      text-decoration: underline;
+    }
+
   }
 
-	
-	.post-link{
-	background: transparent;
+  .post-link {
+    background: transparent;
     border: 1px solid #e5e5e5;
-    margin-bottom: 15px;	
-	    position: relative;	
-	height: 81px;	
-	    -webkit-transition: all 0.12s ease;
+    margin-bottom: 15px;
+    position: relative;
+    height: 81px;
+    -webkit-transition: all 0.12s ease;
     transition: all 0.12s ease;
-    
-		& img{
-			    display: inline-block;
-				border-right: 1px solid #e5e5e5;
-				width: 100%;
-    			max-width: 80px;
-				position: relative;
-				z-index: 1;
-		}	
-		&.white{
-			background: #fefeff;	
-		}
-	}	
-	
-	.post-link:hover .post-link-name{
-		text-decoration: underline;
-		
-	}
-	.post-link:hover{
-	background: #fefeff;	
-		webkit-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.05);
+
+    & img {
+      display: inline-block;
+      border-right: 1px solid #e5e5e5;
+      width: 100%;
+      max-width: 80px;
+      position: relative;
+      z-index: 1;
+    }
+    &.white {
+      background: #fefeff;
+    }
+  }
+
+  .post-link:hover .post-link-name {
+    text-decoration: underline;
+
+  }
+  .post-link:hover {
+    background: #fefeff;
+    webkit-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.05);
     box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.05);
-     -webkit-transition: all 0.12s ease;
-    transition: all 0.12s ease;	
-	}
-	
-	
-	.post-link-name{
+    -webkit-transition: all 0.12s ease;
+    transition: all 0.12s ease;
+  }
+
+  .post-link-name {
+    font-size: 12px!important;
     margin-top: 15px;
     margin: 8px 10px 5px;
     display: inline-block;
     vertical-align: top;
     color: #333;
     word-wrap: break-word;
-    max-width: calc(100% - 160px);	
-	font-size: 17px;
-	}
-	.post-link-website{
-	position: absolute;
+    max-width: calc(100% - 160px);
+    font-size: 17px;
+  }
+  .post-link-website {
+    font-size: 12px!important;
+    position: absolute;
     bottom: 8px;
     right: 10px;
     color: #999;
-    font-size: 14px;	
-	}
-	
-	
-	
-	
-  .comments-button, .upvote-button {
+    font-size: 14px;
+  }
+
+  .comments-button, .upvote-button ,.group-button{
     height: 24px;
     border-radius: 3px;
     background: #fefeff;
     transition: all linear 0.15s;
-    padding: 4px;
     float: right;
     display: inline-block;
     width: 50px;
@@ -527,27 +515,26 @@ position: relative;
   .comments-button {
     border: 1px solid #C4C4C4;
     right: 135px;
-        max-width: 95px;
+    max-width: 95px;
   }
 
-	.groupName-link{
-	transition: all linear 0.15s;
-	position: absolute;	
+  .groupName-link {
+    transition: all linear 0.15s;
+    position: absolute;
     right: 200px;
-	font-size: 13px;
-	line-height: 24px;
-	color: #a49f99;
+    font-size: 13px;
+    line-height: 24px;
+    color: #a49f99;
     z-index: 2;
-	}	
-	.groupName-link:hover{
-		text-decoration: underline;
-	}
-	
-	
+  }
+  .groupName-link:hover {
+    text-decoration: underline;
+  }
+
   .upvote-button {
     border: 1px solid #48ACF1;
     right: 70px;
-	z-index: 500;
+    z-index: 500;
   }
 
   .comments-button.big {
@@ -576,6 +563,25 @@ position: relative;
     }
   }
 
+  .group-button {
+    &.big {
+      right: 150px;
+      max-width: 66px;
+      height: 36px;
+    }
+    &.small {
+      position: relative;
+      float: right;
+      right: 150px;
+      margin-left: 10px;
+      max-width: 70px;
+      width: auto;
+      border: none;
+      padding-right: 0;
+    }
+  }
+
+
   .comments-button {
     &.small {
       position: relative;
@@ -593,6 +599,15 @@ position: relative;
   }
 
   .upvote-button {
+    &:hover {
+      background: #f2f2f2;
+    }
+    &.small:hover {
+      background: transparent;
+    }
+  }
+
+  .group-button {
     &:hover {
       background: #f2f2f2;
     }
@@ -644,6 +659,21 @@ position: relative;
     transition: all ease-in 0.3s;
   }
 
+  .group-button p {
+    font-size: 12px;
+    display: inline-block;
+    padding: 0px 5px;
+    line-height: 15px;
+    float: right;
+    color: #999;
+    margin-right: 15px;
+    width: calc(100% - 15px);
+    text-align: center;
+    color: #48ACF1;
+    transition: all ease-in 0.3s;
+  }
+
+
   .comments-button.big p, .upvote-button.big p {
     font-size: 14px;
     line-height: 19px;
@@ -687,22 +717,19 @@ position: relative;
       width: 100%;
       padding: 5px 0px;
       font-size: 14px;
-   -webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out, border 0.3s ease-in-out;	
+      -webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
       color: #999;
     }
     &:hover a {
       color: #44a3e4;
     }
-	&:hover a img {
+    &:hover a img {
       opacity: 1;
-    }  
-	  
+    }
+
   }
-	
-	
-	
 
   /*--------- inside a question page -----------*/
 
@@ -805,8 +832,8 @@ position: relative;
     max-width: 800px;
     cursor: auto;
     word-wrap: break-word;
-//    text-align: justify;
-//    text-justify: inter-word;	  
+    //    text-align: justify;
+    //    text-justify: inter-word;
   }
 
   .answer-date {
@@ -829,49 +856,47 @@ position: relative;
 
   .answer-box:hover .answer-date {
     opacity: 1;
-  }	
-	
+  }
+
   .answer-comments {
     margin-right: 54px;
   }
 
-	.unsigned-message {
-  width: 100%;
-  height: 70px;
-  text-align: center;
-  background: #f1f1f1;
-  border-radius: 7px;
-  padding-top: 15px;
-  border: 1px solid #f2f2f2;
-  color: #999;
-  float: right;
-  margin-bottom: 15px;
-  a {
-    color: #44a3e4;
-    &:hover {
-      text-decoration: underline;
+  .unsigned-message {
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    background: #f1f1f1;
+    border-radius: 7px;
+    padding-top: 15px;
+    border: 1px solid #f2f2f2;
+    color: #999;
+    float: right;
+    margin-bottom: 15px;
+    a {
+      color: #44a3e4;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
-}
 
-
- /*------------------ loader -------------------*/	
-#page-loading{
+  /*------------------ loader -------------------*/
+  #page-loading {
     float: left;
     display: block;
     width: 100%;
-}
+  }
 
-
-.loading-box{
+  .loading-box {
     width: 175px;
-	margin: 0px auto;
-	height: 30px;
-	display: block;
-	margin-top: 20%;
-}
+    margin: 0px auto;
+    height: 30px;
+    display: block;
+    margin-top: 20%;
+  }
 
-.loading-header{
+  .loading-header {
     display: block;
     color: #a49f99;
     font-size: 30px;
@@ -881,99 +906,97 @@ position: relative;
     float: right;
     margin-right: 10px;
 
-}
+  }
 
-.loading-text{
+  .loading-text {
     float: left;
     color: #a49f99;
     width: 100%;
     font-size: 15px;
     margin-top: 8px;
     text-align: center;
-}
+  }
 
-.loading-icon{
+  .loading-icon {
     width: 30px;
     height: 30px;
     display: block;
     float: right;
-}
+  }
 
-.loader {
-  font-size: 10px;
-  margin: 0px auto;
-  text-indent: -9999em;
+  .loader {
+    font-size: 10px;
+    margin: 0px auto;
+    text-indent: -9999em;
     width: 30px;
     height: 30px;
     border-radius: 100%;
-  background: #3498db;
-  background: -moz-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
-  background: -webkit-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
-  background: -o-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
-  background: -ms-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
-  background: linear-gradient(to right, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
-  position: relative;
-  -webkit-animation: load3 1.4s infinite linear;
-  animation: load3 1.4s infinite linear;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-}
-.loader:before {
-  width: 50%;
-  height: 50%;
-  background: #a49f99;
-  border-radius: 100% 0 0 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '';
-}
-.loader:after {
-  background: #fafafa;
-  width: 75%;
-  height: 75%;
-  border-radius: 50%;
-  content: '';
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
+    background: #3498db;
+    background: -moz-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+    background: -webkit-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+    background: -o-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+    background: -ms-linear-gradient(left, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+    background: linear-gradient(to right, #a49f99 10%, rgba(255, 255, 255, 0) 42%);
+    position: relative;
+    -webkit-animation: load3 1.4s infinite linear;
+    animation: load3 1.4s infinite linear;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  .loader:before {
+    width: 50%;
+    height: 50%;
+    background: #a49f99;
+    border-radius: 100% 0 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+  }
+  .loader:after {
+    background: #fafafa;
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    content: '';
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
 
-.white{
-	
-}
+  .white {
 
-.white:after{
-  background: #fff;	
-}
+  }
 
-@-webkit-keyframes load3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+  .white:after {
+    background: #fff;
   }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+
+  @-webkit-keyframes load3 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
   }
-}
-@keyframes load3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+  @keyframes load3 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
   }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-	
-	
-	
+
   /*------------------ Write a comment -------------------*/
 
   .comment-box {
@@ -986,7 +1009,7 @@ position: relative;
     display: block;
     max-width: 720px;
     margin-bottom: 35px;
-	
+
   }
 
   .profile-comment-section {
@@ -995,25 +1018,24 @@ position: relative;
     float: right;
   }
 
-.comment-section {
-  margin: 0px auto;
-  min-height: 150px;
-  position: relative;
-  background-color: #fff;
-  float: left;
-  display: block;
-  border: 1px solid;
-  border-color: #E5E6E9 #DFE0E4 #D0D1D5;
-  width: 100%;
-  max-width: calc(100% - 60px);
-  margin-left: 0;
-  border-radius: 5px;
-    opacity: 0.3;	
-  
-}
-	
- 	
-	.comming-soon-comment{
+  .comment-section {
+    margin: 0px auto;
+    min-height: 150px;
+    position: relative;
+    background-color: #fff;
+    float: left;
+    display: block;
+    border: 1px solid;
+    border-color: #E5E6E9 #DFE0E4 #D0D1D5;
+    width: 100%;
+    max-width: calc(100% - 60px);
+    margin-left: 0;
+    border-radius: 5px;
+    opacity: 0.3;
+
+  }
+
+  .comming-soon-comment {
     margin: 0px auto;
     min-height: 150px;
     position: absolute;
@@ -1027,10 +1049,9 @@ position: relative;
     padding-top: 55px;
     text-align: center;
     color: #999;
-		
-	}	
-	
-	
+
+  }
+
   .round-profile.feed.comment {
     margin-top: 8px;
     width: 44px;
@@ -1398,28 +1419,27 @@ position: relative;
     margin-top: -10px;
   }
 
-	.img-rounded{
+  .img-rounded {
     position: relative;
     overflow: hidden;
     border-radius: 3px;
     height: 90px;
     width: 100%;
     object-fit: cover;
-	opacity: 0.2;	
-	-webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+    opacity: 0.2;
+    -webkit-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out, border 0.3s ease-in-out;		
-		
-	}	
-	
-	.links-title{
+    transition: all 0.3s ease-in-out, border 0.3s ease-in-out;
+
+  }
+
+  .links-title {
     line-height: 140%;
     font-size: 15px;
     margin-top: 5px;
     margin-bottom: 10px;
-}
-	
-	
+  }
+
   @media screen and (max-width: 769px) {
     .categories-container {
       display: none;
@@ -1436,7 +1456,7 @@ position: relative;
       padding: 0px;
     }
     .main-section {
-    top: 55px;
+      top: 55px;
     }
     .question-box {
       padding: 20px 10px;
@@ -1512,35 +1532,35 @@ position: relative;
     .question-keywords {
       right: 160px;
     }
-	.post-link {
-    height: 101px; 
-	  }
-	.post-link img {
-    max-width: 100px;
-	  }
-	  .post-link-name {
-		  font-size: 16px;
-		     white-space: nowrap;
-		  	overflow: hidden;
-		  	text-overflow: ellipsis;
-    max-width: calc(100% - 140px);
-	  }
-	  
-.questions-date {
-    line-height: 29px;
-    padding-right: 5px;
-    font-size: 14px;
-}	  
-.icon-facebook, .icon-popular {
-   
-    width: 15px;
-    height: 15px;
-    margin-top: 7px;
-}	  
-	
-	 .icon-facebook  {
-	 fill: #3a589a;	  
-	  }	  
+    .post-link {
+      height: 101px;
+    }
+    .post-link img {
+      max-width: 100px;
+    }
+    .post-link-name {
+      font-size: 16px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: calc(100% - 140px);
+    }
+
+    .questions-date {
+      line-height: 29px;
+      padding-right: 5px;
+      font-size: 14px;
+    }
+    .icon-facebook, .icon-popular {
+
+      width: 15px;
+      height: 15px;
+      margin-top: 7px;
+    }
+
+    .icon-facebook {
+      fill: #3a589a;
+    }
   }
 
   @media screen and (max-width: 469px) {
